Debugging Order Flow Polishign the Checkout UI Added Mailer-service support in configs

--- a/core/i18n/resource/i18n/pt-PT.csv
+++ b/core/i18n/resource/i18n/pt-PT.csv
@@ -11,7 +11,7 @@
 "Grand total","Total"
 "Home Page","Página Inicial"
 "Internal Application error while refreshing the tokens. Please clear the storage and refresh page.","Erro Interno da Aplicação ao atualizar as tokens. Por favor limpe o cache do seu browser e recarregue a página."
-"Internal validation error. Please check if all required fields are filled in. Please contact us on contributors@vuestorefront.io","Erro interno de validação. Por favor verifique se todos os campos obrigatórios estão preenchidos. Por favor contate-nos em contributors@vuestorefront.io"
+"Internal validation error. Please check if all required fields are filled in. Please contact us on support@procc.co","Erro interno de validação. Por favor verifique se todos os campos obrigatórios estão preenchidos. Por favor contate-nos em support@procc.co"
 "My Account","A Minha Conta"
 "Newsletter preferences have successfully been updated","As suas preferências para a Newsletter foram atualizadas."
 "No products synchronized for this category. Please come back while online!","Nenhum produto sincronizado para esta categoria. Por favor volte qundo estiver online!"
