i18n text changes shipping icon resize

--- a/src/themes/default-procc/resource/i18n/ar-SY.csv
+++ b/src/themes/default-procc/resource/i18n/ar-SY.csv
@@ -24,7 +24,7 @@
 "Contact us","تواصل معنا"
 "Continue to payment","الاستمرار للدفع"
 "Continue to shipping","الاستمرار بالتسوّق"
-"Copy address data from shipping","نسخ بيانات العنوان من عنوان الشحن"
+"The billing address is the same","نسخ بيانات العنوان من عنوان الشحن"
 "Country *","البلد *"
 "Country","الدولة"
 "Create a new account","إنشاء حساب جديد"
