--- a/src/themes/default-procc/resource/i18n/cs-CZ.csv
+++ b/src/themes/default-procc/resource/i18n/cs-CZ.csv
@@ -24,7 +24,7 @@
 "Contact us","Kontaktujte nás"
 "Continue to payment","Pokračujte v platbě"
 "Continue to shipping","Pokračujte na údaje o dopravě"
-"Copy address data from shipping","Zkopírujte data z informací pro doručení"
+"The billing address is the same","Zkopírujte data z informací pro doručení"
 "Country *","Země *"
 "Country","Země"
 "Create a new account","Vytvořit nový účet"
