--- a/src/themes/default-procc/resource/i18n/de-DE.csv
+++ b/src/themes/default-procc/resource/i18n/de-DE.csv
@@ -26,7 +26,7 @@
 "Contact us","Kontaktieren Sie uns"
 "Continue to payment","Weiter zur Zahlung"
 "Continue to shipping","Weiter zum Versand"
-"Copy address data from shipping","Die Rechnungsadresse entspricht der Lieferadresse"
+"The billing address is the same","Die Rechnungsadresse entspricht der Lieferadresse"
 "Country *","Land *"
 "Country","Land"
 "Create a new account","Erstellen Sie ein neues Konto"
