--- a/src/themes/default-procc/resource/i18n/it-IT.csv
+++ b/src/themes/default-procc/resource/i18n/it-IT.csv
@@ -33,7 +33,7 @@
 "Contact us","Contattaci"
 "Continue to payment","Continua con il pagamento"
 "Continue to shipping","Continua gli acquisti"
-"Copy address data from shipping","Utilizza l'indirizzo di spedizione"
+"The billing address is the same","Utilizza l'indirizzo di spedizione"
 "Country *","Paese*"
 "Country","Paese"
 "Create a new account","Crea un nuovo account"
