--- a/src/themes/default-procc/resource/i18n/ru-RU.csv
+++ b/src/themes/default-procc/resource/i18n/ru-RU.csv
@@ -18,7 +18,7 @@
 "Contact us","Контакты"
 "Continue to payment","Перейти к платежу"
 "Continue to shipping","Перейти к доставке"
-"Copy address data from shipping","Скопировать адресные данные из доставки"
+"The billing address is the same","Скопировать адресные данные из доставки"
 "Country *","Страна *"
 "Country","Страна"
 "Create a new account","Создать новую учетную запись"
