--- a/src/themes/default-procc/resource/i18n/zh-cn.csv
+++ b/src/themes/default-procc/resource/i18n/zh-cn.csv
@@ -26,7 +26,7 @@
 "Contact us","联系我们"
 "Continue to payment","继续付款"
 "Continue to shipping","继续发货"
-"Copy address data from shipping","从发货中复制地址数据"
+"The billing address is the same","从发货中复制地址数据"
 "Country *","国家 *"
 "Country","国家"
 "Create a new account","创建账号"
