--- a/src/themes/default-procc/resource/i18n/fr-FR.csv
+++ b/src/themes/default-procc/resource/i18n/fr-FR.csv
@@ -23,7 +23,7 @@
 "Contact us","Contactez-nous"
 "Continue to payment","Continuer vers le paiement"
 "Continue to shipping","Continuer vos achats"
-"Copy address data from shipping","Copier les données de l'adresse d'expédition"
+"The billing address is the same","Copier les données de l'adresse d'expédition"
 "Country *","Pays *"
 "Country","Pays"
 "Create a new account","Créer un compte"
