- Worked on new order confirmation page - Created Address,order items, and Micro cart summary components for order confirmation and Microcart - Added code for login or registration in Microcart - Display cart item group by brand and display brands and shipping method in Microcart page

--- a/src/themes/default-procc/resource/i18n/en-US.csv
+++ b/src/themes/default-procc/resource/i18n/en-US.csv
@@ -295,10 +295,11 @@
 "{count} items","{count} items",
 "Thank you for your purchase", "Thank you for your purchase",
 "Order number,", "Order number:",
-"What are the next steps?", "What are the next steps?",
-"You will receive an email at", "You will receive an email at confirming your order.",
+"What are the next steps?a", "What are the next steps?",
+"You will receive an email at", "You will receive an email at",
 "confirming your order.", "confirming your order.",
-"You will receive another confirmation email at shipping. If you have any questions, see our FAQ", "You will receive another confirmation email when shipping. If you have any questions, see the FAQ",
+"confirming your order.", "confirming your order.",
+"You will receive another confirmation email at shipping. If you have any questions, see our", "You will receive another confirmation email when shipping. If you have any questions, see the",
 "You can check the status of the order using your account's Order History", "You can check the status of the order using your account's Order History",
 "Save your shipping and payment details to your ProCC account.", "Save your shipping and payment details to your ProCC account.",
 "Do you want us to keep your personal information in accordance with our Privacy Policy?", "Do you want us to keep your personal information in accordance with our Privacy Policy?",
