Fixing the New Secrets Configuration and Post Purchase Page :)

--- a/core/i18n/resource/i18n/ja-JP.csv
+++ b/core/i18n/resource/i18n/ja-JP.csv
@@ -23,7 +23,7 @@
 "Confirmation of receival","商品受け取りの確認"
 "Continue to payment","支払いへ進む"
 "Continue to shipping","買い物へ進む"
-"The billing address is the same","配送住所からコピー"
+"My billing address is the same","配送住所からコピー"
 "Create a new account","新しいアカウントの作成"
 "Current password *","現在のパスワード *"
 "Custom Cms Page","カスタムCMSページ"
