--- a/src/themes/default-procc/resource/i18n/en-US.csv
+++ b/src/themes/default-procc/resource/i18n/en-US.csv
@@ -33,7 +33,7 @@
 "Contact us","Contact us"
 "Continue to payment","Continue to payment"
 "Continue to shipping","Continue to shipping"
-"The billing address is the same","The billing address is the same"
+"My billing address is the same","My billing address is the same"
 "Country *","Country *"
 "Country","Country"
 "Create a new account","Create a new account"
@@ -293,15 +293,15 @@
 "to find product you were looking for.","to find product you were looking for."
 "to find something beautiful for You!","to find something beautiful for You!"
 "{count} items","{count} items",
-"Thank you for your purchase", "Thank you for your purchase",
-"Order number,", "Order number:",
-"What are the next steps?a", "What are the next steps?",
-"You will receive an email at", "You will receive an email at",
-"confirming your order.", "confirming your order.",
-"confirming your order.", "confirming your order.",
-"You will receive another confirmation email at shipping. If you have any questions, see our", "You will receive another confirmation email when shipping. If you have any questions, see the",
-"You can check the status of the order using your account's Order History", "You can check the status of the order using your account's Order History",
-"Save your shipping and payment details to your ProCC account.", "Save your shipping and payment details to your ProCC account.",
-"Do you want us to keep your personal information in accordance with our Privacy Policy?", "Do you want us to keep your personal information in accordance with our Privacy Policy?",
-"Do you want us to keep your payment information in accordance with our Privacy Policy?", "Do you want us to keep your payment information in accordance with our Privacy Policy?"
+"Thank you for your purchase","Thank you for your purchase",
+"Order number,","Order number:",
+"What are the next steps?a","What are the next steps?",
+"You will receive an email at","You will receive an email at",
+"confirming your order.","confirming your order.",
+"confirming your order.","confirming your order.",
+"You will receive another confirmation email at shipping. If you have any questions, see our","You will receive another confirmation email when shipping. If you have any questions, see the",
+"You can check the status of the order using your account's Order History","You can check the status of the order using your account's Order History",
+"Save your shipping and payment details to your ProCC account.","Save your shipping and payment details to your ProCC account.",
+"Do you want us to keep your personal information in accordance with our Privacy Policy?","Do you want us to keep your personal information in accordance with our Privacy Policy?",
+"Do you want us to keep your payment information in accordance with our Privacy Policy?","Do you want us to keep your payment information in accordance with our Privacy Policy?"
 
