--- a/src/themes/default-procc/resource/i18n/es-ES.csv
+++ b/src/themes/default-procc/resource/i18n/es-ES.csv
@@ -12,7 +12,7 @@
 "Contact us","Contáctenos"
 "Continue to payment","Continuar con el pago"
 "Continue to shipping","Continuar con el envío"
-"The billing address is the same","Copie los datos de la dirección del envío"
+"My billing address is the same","Copie los datos de la dirección del envío"
 "Country","País"
 "Current password *","Contraseña actual *"
 "Customer service","Servicio al cliente"
