--- a/src/themes/default-procc/resource/i18n/nl-NL.csv
+++ b/src/themes/default-procc/resource/i18n/nl-NL.csv
@@ -34,7 +34,7 @@ Confirm your order,Bevestig uw bestelling
 Contact us,Neem contact met ons op
 Continue to payment,Ga door naar betaling
 Continue to shipping,Ga door naar verzending
-The billing address is the same,Kopieer adresgegevens van verzending
+My billing address is the same,Kopieer adresgegevens van verzending
 Country,Land
 Current password *,Huidige wachtwoord *
 Customer service,Klantenservice
