--- a/src/themes/default-procc/resource/i18n/pl-PL.csv
+++ b/src/themes/default-procc/resource/i18n/pl-PL.csv
@@ -20,7 +20,7 @@
 "Contact us","Kontakt"
 "Continue to payment","Przejdź do płatności"
 "Continue to shipping","Przejdź do opcji wysyłki"
-"The billing address is the same","Kopiuj dane adresowe z wysyłki"
+"My billing address is the same","Kopiuj dane adresowe z wysyłki"
 "Country *","Kraj *"
 "Country","Kraj"
 "Create a new account","Stwórz nowe konto"
