--- a/src/themes/default-procc/resource/i18n/pt-BR.csv
+++ b/src/themes/default-procc/resource/i18n/pt-BR.csv
@@ -18,7 +18,7 @@
 "Contact us","Entre em contato"
 "Continue to payment","Continuar para Pagamento"
 "Continue to shipping","Continuar para entrega"
-"The billing address is the same","Copiar endereço dos dados de entrega"
+"My billing address is the same","Copiar endereço dos dados de entrega"
 "Country *","País *"
 "Country","País"
 "Create a new account","Criar uma nova conta"
