--- a/src/themes/default-procc/resource/i18n/ja-JP.csv
+++ b/src/themes/default-procc/resource/i18n/ja-JP.csv
@@ -18,7 +18,7 @@
 "Contact us","Contact us"
 "Continue to payment","支払いに進む"
 "Continue to shipping","買い物を続ける"
-"The billing address is the same","発送先の住所をコピーする"
+"My billing address is the same","発送先の住所をコピーする"
 "Country *","国 *"
 "Country","国"
 "Create a new account","アカウントを作る"
