--- a/src/themes/default-procc/resource/i18n/jp-JP.csv
+++ b/src/themes/default-procc/resource/i18n/jp-JP.csv
@@ -143,7 +143,7 @@
 "Name must have at least 3 letters.","名前は最低３文字必要です"
 "Zip-code must have at least 3 letters.","郵便番号は最低3文字必要です"
 "I want to create an account'","アカウントを作成する'"
-"The billing address is the same","発送先の住所をコピーする"
+"My billing address is the same","発送先の住所をコピーする"
 "Tax identification number must have at least 3 letters.","税金IDは最低3文字必要です"
 "Please provide valid e-mail address.","正しいメールアドレスを入力してください"
 "Use my company's address details","自分の会社の住所を使う"
