Added Animate.css Added smooth scroll plugin in Checkout.js Added UI to Update the Customers Account with shipping and Payment Data -> needs backend work Polished the Final Thank You page

--- a/core/i18n/resource/i18n/ja-JP.csv
+++ b/core/i18n/resource/i18n/ja-JP.csv
@@ -48,7 +48,7 @@
 "Forgot the password?","パスワードを忘れましたか？"
 "General agreement","一般的な合意"
 "Get inspired","インスピレーションをもらおう"
-"Give a feedback","フィードバックを送る"
+"Send feedback","フィードバックを送る"
 "Go review the order","注文のレビュー"
 "Go to checkout","支払いへ進む"
 "Grand total","総合計額"
