--- a/src/themes/default-procc/resource/i18n/ar-SY.csv
+++ b/src/themes/default-procc/resource/i18n/ar-SY.csv
@@ -65,7 +65,7 @@
 "German","ألماني"
 "Germany","ألمانيا"
 "Get inspired","احصل على الإلهام"
-"Give a feedback","أخبرنا برأيك"
+"Send feedback","أخبرنا برأيك"
 "Go review the order","الذهاب لمعاينة الطلبية"
 "Go to Facebook","اذهب إلى فيس بوك"
 "Go to Instagram","اذهب إلى انستغرام"
@@ -225,7 +225,7 @@
 "We will send you the invoice to given e-mail address","سنرسل الفاتورة لبريدك الإلكتروني المعطى"
 "We've noticed Internal Server Error while rendering this request.","لاحظنا حصول خطأ داخلي في المخدّم أثناء تقديم هذا الطلب."
 "We've sent password reset instructions to your email. Check your inbox and follow the link.","لقد أرسلنا تعليمات ضبط كلمة المرور إلى بريدك الإلكتروني. يرجى تفقّد بريدك الإلكتروني والضغط على الرابط المرسل."
-"What we can improve?","ما الذي يمكننا تحسينه ؟"
+"What can we improve?","ما الذي يمكننا تحسينه ؟"
 "Wishlist","قائمة المفضّلة"
 "Women fashion","أزياء نسائية"
 "You are logged in as {firstname}","أنت مسجل دخولك كـ {firstname}"
