--- a/src/themes/default-procc/resource/i18n/cs-CZ.csv
+++ b/src/themes/default-procc/resource/i18n/cs-CZ.csv
@@ -65,7 +65,7 @@
 "German","Němčina"
 "Germany","Německo"
 "Get inspired","Inspirujte se"
-"Give a feedback","Dejte nám zpětnou vazbu"
+"Send feedback","Dejte nám zpětnou vazbu"
 "Go review the order","Přejít na kontrolu objednávky"
 "Go to Facebook","Přejít na Facebook"
 "Go to Instagram","Přejít na Instagram"
@@ -228,7 +228,7 @@
 "We will send you the invoice to given e-mail address","Fakturu vám zašleme na danou e-mailovou adresu"
 "We've noticed Internal Server Error while rendering this request.","Při vyřizování této žádosti jsme zaznamenali interní chybu serveru."
 "We've sent password reset instructions to your email. Check your inbox and follow the link.","Na e-mail jsme vám zaslali informace pro obnovení hesla. Zkontrolujte si příchozí poštu a postupujte dle zaslaného odkazu"
-"What we can improve?","Co můžeme zlepšit?"
+"What can we improve?","Co můžeme zlepšit?"
 "Wishlist","Seznam přání"
 "Women fashion","Dámská móda"
 "You are logged in as {firstname}","Jste přihlášeni jako {firstname}"
