--- a/src/themes/default-procc/resource/i18n/et-EE.csv
+++ b/src/themes/default-procc/resource/i18n/et-EE.csv
@@ -241,10 +241,10 @@ Discount,Allahindlus
 "You have successfuly placed the order. You can check status of your order by using our <b>delivery status</b> feature. You will receive an order confirmation e-mail with details of your order and a link to track its progress.","Tellimus vormistamine õnnestus. Saadame teile tellimuse kinnituse e-mailile. "
 "E-mail us at <b>demo@vuestorefront.io</b> with any questions, suggestions how we could improve products or shopping experience","Ootame Teie poolset tagasisidet oma teenuse täiendamiseks."
 "Your Account",Konto
-"What we can improve?","Mida võiksime paremini teha?"
+"What can we improve?","Mida võiksime paremini teha?"
 "Your feedback is important for us. Let us know what we could improve.","Teie tagasiside on meile tähtis. Palun kirjutage meile, mida võiksime veelgi paremaks muuta."
 "Type your opinion","Kirjuta oma arvamus"
-"Give a feedback","Anna tagasisidet"
+"Send feedback","Anna tagasisidet"
 "Choose your country","Vali riik"
 "You can log to your account using e-mail and password defined earlier. On your account you can <b>edit your profile data,</b> check <b>history of transactions,</b> edit <b>subscription to newsletter.</b>","Saate oma kontole e-maili ja parooli abil siseneda."
 "United States",USA
