--- a/src/themes/default-procc/resource/i18n/it-IT.csv
+++ b/src/themes/default-procc/resource/i18n/it-IT.csv
@@ -76,7 +76,7 @@
 "German","Tedesco"
 "Germany","Germania"
 "Get inspired","Lasciati ispirare"
-"Give a feedback","Invia un riscontro"
+"Send feedback","Invia un riscontro"
 "Go review the order","Vai al riepilogo dell'ordine"
 "Go to Facebook","Vai su Facebook"
 "Go to Instagram","Vai su Instagram"
@@ -250,7 +250,7 @@
 "We will send you the invoice to given e-mail address","La fattura verrà inviata all'indirizzo email inserito"
 "We've noticed Internal Server Error while rendering this request.","È stato rilevatao un errore interno del server durante questa richiesta."
 "We've sent password reset instructions to your email. Check your inbox and follow the link.","Abbiamo inviato le istruzioni per reimpostare la password al tuo indirizzo email. Verifica la tua casella di posta e segui il link."
-"What we can improve?","Cosa possiamo migliorare?"
+"What can we improve?","Cosa possiamo migliorare?"
 "Wishlist","Lista dei desideri"
 "Women fashion","Abbigliamento donna"
 "You are logged in as {firstname}","Sei connesso come {firstname}"
