--- a/src/themes/default-procc/resource/i18n/pl-PL.csv
+++ b/src/themes/default-procc/resource/i18n/pl-PL.csv
@@ -58,7 +58,7 @@
 "German","Niemiecki"
 "Germany","Niemcy"
 "Get inspired","Inspiracje"
-"Give a feedback","Prześlij opinię"
+"Send feedback","Prześlij opinię"
 "Go review the order","Przejrzyj zamówienie"
 "Go to Facebook","Przejdź do Facebook"
 "Go to Instagram","Przejdź do Instagram"
@@ -208,7 +208,7 @@
 "We will send you details regarding the order","Wyślemy Ci szczegóły Twojego zamówienia"
 "We will send you the invoice to given e-mail address","Wyślemy Ci fakturę na podany adres e-mail"
 "We've sent password reset instructions to your email. Check your inbox and follow the link.","Instrukcja dotycząca resetowania hasła została wysłana na Twój adres email. Sprawdź skrzynkę odbiorczą."
-"What we can improve?","Co możemy udoskonalić?"
+"What can we improve?","Co możemy udoskonalić?"
 "Wishlist","Lista życzeń"
 "Women fashion","Moda damska"
 "You are logged in as {firstname}","Jesteś zalogowany jako {firstname}"
