--- a/src/themes/default-procc/resource/i18n/zh-cn.csv
+++ b/src/themes/default-procc/resource/i18n/zh-cn.csv
@@ -64,7 +64,7 @@
 "German","German"
 "Germany","Germany"
 "Get inspired","得到灵感"
-"Give a feedback","给出反馈"
+"Send feedback","给出反馈"
 "Go review the order","返回查看订单"
 "Go to Facebook","Go to Facebook"
 "Go to Instagram","Go to Instagram"
@@ -224,7 +224,7 @@
 "We will send you the invoice to given e-mail address","我们将发票发送到你的邮箱"
 "We've noticed Internal Server Error while rendering this request.","我们在呈现此请求时注意到内部服务器错误."
 "We've sent password reset instructions to your email. Check your inbox and follow the link.","W已经将密码重置说明发送到您的电子邮箱。 请检查您的收件箱，并点击重置密码链接"
-"What we can improve?","我们可以改进什么?"
+"What can we improve?","我们可以改进什么?"
 "Wishlist","心愿单"
 "Women fashion","女性时尚"
 "You are logged in as {firstname}","你已登录 {firstname}"
