--- a/src/themes/default-procc/resource/i18n/de-DE.csv
+++ b/src/themes/default-procc/resource/i18n/de-DE.csv
@@ -68,7 +68,7 @@
 "German","Deutsch"
 "Germany","Deutschland"
 "Get inspired","Lassen Sie sich inspirieren"
-"Give a feedback","Geben Sie Feedback"
+"Send feedback","Geben Sie Feedback"
 "Go review the order","Weiter zur Bestellübersicht"
 "Go to Facebook","Zu Facebook gehen"
 "Go to Instagram","Zu Instagram gehen"
@@ -235,7 +235,7 @@
 "We will send you the invoice to given e-mail address","Wir senden Ihnen die Rechnung an die angegebene E-Mail-Adresse"
 "We've noticed Internal Server Error while rendering this request.","Bei der Verarbeitung Ihrer Anfrage gab es einen internen Fehler."
 "We've sent password reset instructions to your email. Check your inbox and follow the link.","Wir haben Ihnen eine Anleitung zum Zurücksetzen des Passworts an Ihre E-Mail-Adresse gesendet. Bitte überprüfen Sie Ihren Posteingang und folgen Sie dem Link."
-"What we can improve?","Was können wir verbessern?"
+"What can we improve?","Was können wir verbessern?"
 "Wishlist","Wunschliste"
 "Women fashion","Damenmode"
 "You are logged in as {firstname}","Sie sind als {firstname} eingeloggt"
