--- a/src/themes/default-procc/resource/i18n/en-US.csv
+++ b/src/themes/default-procc/resource/i18n/en-US.csv
@@ -76,7 +76,7 @@
 "German","German"
 "Germany","Germany"
 "Get inspired","Get inspired"
-"Give a feedback","Give a feedback"
+"Send feedback","Send feedback"
 "Go review the order","Go review the order"
 "Go to Facebook","Go to Facebook"
 "Go to Instagram","Go to Instagram"
@@ -250,7 +250,7 @@
 "We will send you the invoice to given e-mail address","We will send you the invoice to given e-mail address"
 "We've noticed Internal Server Error while rendering this request.","We've noticed Internal Server Error while rendering this request."
 "We've sent password reset instructions to your email. Check your inbox and follow the link.","We've sent password reset instructions to your email. Check your inbox and follow the link."
-"What we can improve?","What we can improve?"
+"What can we improve?","What can we improve?"
 "Wishlist","Wishlist"
 "Women fashion","Women fashion"
 "You are logged in as {firstname}","You are logged in as {firstname}"
@@ -301,7 +301,7 @@
 "confirming your order.","confirming your order.",
 "You will receive another confirmation email at shipping. If you have any questions, see our","You will receive another confirmation email when shipping. If you have any questions, see the",
 "You can check the status of the order using your account's Order History","You can check the status of the order using your account's Order History",
-"Save your shipping and payment details to your ProCC account.","Save your shipping and payment details to your ProCC account.",
-"Do you want us to keep your personal information in accordance with our Privacy Policy?","Do you want us to keep your personal information in accordance with our Privacy Policy?",
-"Do you want us to keep your payment information in accordance with our Privacy Policy?","Do you want us to keep your payment information in accordance with our Privacy Policy?"
-
+"Store your order's details in your ProCC Account","Store your order's details in your ProCC Account",
+"Save my Personal Information in accordance with ProCC's Privacy Policy","Save my Personal Information in accordance with ProCC's Privacy Policy",
+"Save my Payment Information in accordance with ProCC's Privacy Policy","Save my Payment Information in accordance with ProCC's Privacy Policy"
+"Save to Account","Save to Account"
