--- a/src/themes/default-procc/resource/i18n/fr-FR.csv
+++ b/src/themes/default-procc/resource/i18n/fr-FR.csv
@@ -63,7 +63,7 @@
 "German","Allemand"
 "Germany","Allemagne"
 "Get inspired","Soyez inspiré"
-"Give a feedback","Envoyer un commentaire"
+"Send feedback","Envoyer un commentaire"
 "Go review the order","Vérifier le contenu de la commande"
 "Go to Facebook","Aller sur Facebook"
 "Go to Instagram","Aller sur Instagram"
@@ -215,7 +215,7 @@
 "We will send you details regarding the order","Nous vous enverrons les détails concernant la commande"
 "We will send you the invoice to given e-mail address","Nous vous enverrons la facture à l'adresse e-mail indiquée"
 "We've sent password reset instructions to your email. Check your inbox and follow the link.","Nous avons envoyé les instructions de réinitialisation du mot de passe à votre adresse e-mail. Vérifiez votre boîte de réception et suivez le lien."
-"What we can improve?","Que pouvons-nous améliorer ?"
+"What can we improve?","Que pouvons-nous améliorer ?"
 "Wishlist","Liste de souhaits"
 "Women fashion","Mode femme"
 "You are logged in as {firstname}","Vous êtes connecté en tant que {firstname}"
