--- a/src/themes/default-procc/resource/i18n/cs-CZ.csv
+++ b/src/themes/default-procc/resource/i18n/cs-CZ.csv
@@ -74,7 +74,7 @@
 "Go to checkout","Přejít k pokladně"
 "Help","Pomoc"
 "Home","Domovská stránka"
-"House/Apartment number *","Číslo domu/bytu *"
+"House/Apartment","Číslo domu/bytu *"
 "House/Apartment number","Číslo domu/bytu"
 "I accept ","Přijímám "
 "I accept terms and conditions","Souhlasím s podmínkami"
