--- a/src/themes/default-procc/resource/i18n/es-ES.csv
+++ b/src/themes/default-procc/resource/i18n/es-ES.csv
@@ -49,7 +49,7 @@
 "Go to checkout","Ir a pagar"
 "Help","Ayuda"
 "Home","Inicio"
-"House/Apartment number *","Número de casa/apartamento *"
+"House/Apartment","Número de casa/apartamento *"
 "House/Apartment number","Número de casa/apartamento"
 "I accept ","Acepto "
 "I agree to","Estoy de acuerdo con"
