--- a/src/themes/default-procc/resource/i18n/fr-FR.csv
+++ b/src/themes/default-procc/resource/i18n/fr-FR.csv
@@ -72,7 +72,7 @@
 "Go to checkout","Commander"
 "Help","Aide"
 "Home","Accueil"
-"House/Apartment number *","Numéro d'appartement / maison *"
+"House/Apartment","Numéro d'appartement / maison *"
 "House/Apartment number","Numéro d'appartement / maison"
 "I accept ","J'accepte "
 "I accept terms and conditions","J'accepte les termes et conditions"
