--- a/src/themes/default-procc/resource/i18n/ja-JP.csv
+++ b/src/themes/default-procc/resource/i18n/ja-JP.csv
@@ -60,7 +60,7 @@
 "Go to checkout","チェックアウトに進む"
 "Help","ヘルプ"
 "Home","ホーム"
-"House/Apartment number *","部屋番号、建物名 *"
+"House/Apartment","部屋番号、建物名 *"
 "House/Apartment number","部屋番号、建物名"
 "I accept ","同意する "
 "I accept terms and conditions","利用規約に同意する"
