--- a/src/themes/default-procc/resource/i18n/nl-NL.csv
+++ b/src/themes/default-procc/resource/i18n/nl-NL.csv
@@ -79,7 +79,7 @@ Go to checkout,Ga naar afrekenen
 Grand Total,Totaal
 Help,Hulp
 Home,Home
-House/Apartment number *,Huisnummer/Toevoeging *
+House/Apartment,Huisnummer/Toevoeging *
 House/Apartment number,Huisnummer/toevoeging
 I accept ,Ik accepteer
 I agree to,Ik ga akkoord met
