--- a/src/themes/default-procc/resource/i18n/pl-PL.csv
+++ b/src/themes/default-procc/resource/i18n/pl-PL.csv
@@ -67,7 +67,7 @@
 "Go to checkout","Przejdź do płatności"
 "Help","Pomoc"
 "Home","Home"
-"House/Apartment number *","Numer domu/mieszkania *"
+"House/Apartment","Numer domu/mieszkania *"
 "House/Apartment number","Numer domu/mieszkania"
 "I accept ","Akceptuję "
 "I accept terms and conditions","Akceptuję regulamin"
