--- a/src/themes/default-procc/resource/i18n/ru-RU.csv
+++ b/src/themes/default-procc/resource/i18n/ru-RU.csv
@@ -60,7 +60,7 @@
 "Go to checkout","Перейти к оформлению заказа"
 "Help","Помощь"
 "Home","Главная"
-"House/Apartment number *","Дом/Номер квартиры *"
+"House/Apartment","Дом/Номер квартиры *"
 "House/Apartment number","Дом/Номер квартиры"
 "I accept ","Я принимаю "
 "I accept terms and conditions","Я принимаю условия и положения"
