--- a/src/themes/default-procc/resource/i18n/zh-cn.csv
+++ b/src/themes/default-procc/resource/i18n/zh-cn.csv
@@ -73,7 +73,7 @@
 "Go to checkout","结算"
 "Help","帮助"
 "Home","主页"
-"House/Apartment number *","房子/公寓号码 *"
+"House/Apartment","房子/公寓号码 *"
 "I accept ","我接受 "
 "I accept terms and conditions","我接受所有的条件和协议"
 "I agree to","我同意"
