--- a/src/themes/default/resource/i18n/ar-SY.csv
+++ b/src/themes/default/resource/i18n/ar-SY.csv
@@ -74,7 +74,7 @@
 "Go to checkout","الدفع وإنهاء التسوّق"
 "Help","المساعدة"
 "Home","الرئيسة"
-"House/Apartment number *","رقم المنزل/الشقة *"
+"House/Apartment","رقم المنزل/الشقة *"
 "House/Apartment number","رقم الشقّة/المنزل"
 "I accept ","أنا موافق على "
 "I accept terms and conditions","أنا موافق على الشروط والأحكام"
