--- a/src/themes/default/resource/i18n/de-DE.csv
+++ b/src/themes/default/resource/i18n/de-DE.csv
@@ -77,7 +77,7 @@
 "Go to checkout","Zur Kasse gehen"
 "Help","Hilfe"
 "Home","Startseite"
-"House/Apartment number *","Hausnummer *"
+"House/Apartment","Hausnummer *"
 "House/Apartment number","Hausnummer"
 "I accept ","Ich akzeptiere "
 "I accept terms and conditions","Ich akzeptiere die Allgemeinen Geschäftsbedingungen"
