--- a/src/themes/default/resource/i18n/en-US.csv
+++ b/src/themes/default/resource/i18n/en-US.csv
@@ -85,7 +85,7 @@
 "Go to checkout","Go to checkout"
 "Help","Help"
 "Home","Home"
-"House/Apartment number *","House/Apartment number *"
+"House/Apartment","House/Apartment"
 "House/Apartment number","House/Apartment number"
 "I accept ","I accept "
 "I accept terms and conditions","I accept terms and conditions"
