--- a/src/themes/default/resource/i18n/it-IT.csv
+++ b/src/themes/default/resource/i18n/it-IT.csv
@@ -85,7 +85,7 @@
 "Go to checkout","Vai alla cassa"
 "Help","Aiuto"
 "Home","Home"
-"House/Apartment number *","Numero/interno*"
+"House/Apartment","Numero/interno*"
 "House/Apartment number","Numero/interno"
 "I accept ","Accetto "
 "I accept terms and conditions","Accetto i termini e le condizioni"
