--- a/src/themes/default/resource/i18n/pt-BR.csv
+++ b/src/themes/default/resource/i18n/pt-BR.csv
@@ -60,7 +60,7 @@
 "Go to checkout","Finalizar Compra"
 "Help","Ajuda"
 "Home","Início"
-"House/Apartment number *","Número *"
+"House/Apartment","Número *"
 "House/Apartment number","Número"
 "I accept ","Eu aceito "
 "I accept terms and conditions","Eu aceito os termos e condições"
