- Worked user registration if user is exist then reset password functionality

--- a/core/i18n/resource/i18n/en-US.csv
+++ b/core/i18n/resource/i18n/en-US.csv
@@ -88,3 +88,4 @@
 "not authorized","not authorized"
 "password","password"
 "to account","to account"
+"Account for {email} already exists.","Account for {email} already exists."
