--- a/src/themes/default-procc/resource/i18n/en-US.csv
+++ b/src/themes/default-procc/resource/i18n/en-US.csv
@@ -305,3 +305,4 @@
 "Save my Personal Information in accordance with ProCC's Privacy Policy","Save my Personal Information in accordance with ProCC's Privacy Policy",
 "Save my Payment Information in accordance with ProCC's Privacy Policy","Save my Payment Information in accordance with ProCC's Privacy Policy"
 "Save to Account","Save to Account"
+"Account for {email} already exists.","Account for {email} already exists."
