Polish the Language Changer

--- a/core/i18n/resource/i18n/bg-BG.csv
+++ b/core/i18n/resource/i18n/bg-BG.csv
@@ -8,6 +8,7 @@
 "Are you sure you would like to remove this item from the shopping cart?","Сигурни ли сте, че искате да премахнете този продукт от пазарската количка?"
 "Checkout","Разгледайте"
 "Columns","колони"
+"Language","Език"
 "Compare Products","Сравнете продукти"
 "Confirm your order","Потвърдете поръчката си"
 "Error refreshing user token. User is not authorized to access the resource","Грешка при опресняване на потребителския маркер. Потребителят няма право да получава достъп до ресурса"
