--- a/core/i18n/resource/i18n/en-US.csv
+++ b/core/i18n/resource/i18n/en-US.csv
@@ -8,6 +8,7 @@
 "Are you sure you would like to remove this item from the shopping cart?","Are you sure you would like to remove this item from the shopping cart?"
 "Checkout","Checkout"
 "Columns","Columns"
+"Language","Language"
 "Compare Products","Compare Products"
 "Compare products","Compare products"
 "Confirm your order","Confirm your order"
