--- a/core/i18n/resource/i18n/en-US.csv
+++ b/core/i18n/resource/i18n/en-US.csv
@@ -229,3 +229,281 @@
 "Fashion and Stylish Everyday Attire","Fashion and Stylish Everyday Attire"
 "8-10","8-10"
 "Bulgaria, Varna","Bulgaria, Varna"
+"French","French"
+"Spanish","Spanish"
+"Dutch","Dutch"
+"Japanese","Japanese"
+"Russian","Russian"
+"Portuguese","Portuguese"
+"Polish","Polish"
+"Czech","Czech"
+"French","French"
+"Deutsch","Deutsch"
+"Български","Български"
+"Français","Français"
+"Español","Español"
+"Nederlandse","Nederlandse"
+"日本語","日本語"
+"Русский","Русский"
+"Italiano","Italiano"
+"Português","Português"
+"Polski","Polski"
+"Český","Český"
+"Greece","Greece"
+"Austria","Austria"
+"Slovenia","Slovenia"
+"Croatia","Croatia"
+"Hungary","Hungary"
+"Poland","Poland"
+"Slovakia","Slovakia"
+"Czechia","Czechia"
+"Romania","Romania"
+"Code must have at least 3 letters.","Code must have at least 3 letters."
+"No Options","No Options"
+"Loading...","Loading..."
+"Please provide valid city name","Please provide valid city name"
+"DPD Austria","DPD Austria"
+"Place Order","Place Order"
+"Something goes Wrong :(  payment fail, please retry","Something goes Wrong :(  payment fail, please retry"
+"We will send you the invoice to ","We will send you the invoice to "
+"as soon as you receive the products and rate them","as soon as you receive the products and rate them"
+"Invoice to","Invoice to"
+"Pay Online","Pay Online"
+"as soon as you receive the products and submit a review","as soon as you receive the products and submit a review"
+"Server failed to verify EU VAT Number","Server failed to verify EU VAT Number"
+"VAT deducted, please account for VAT according to your local law","VAT deducted, please account for VAT according to your local law"
+"Placing the order failed, please contact support!","Placing the order failed, please contact support!"
+"addressUpdated","Address was updated"
+"Afghanistan","Afghanistan"
+"Albania","Albania"
+"Algeria","Algeria"
+"American Samoa","American Samoa"
+"Andorra","Andorra"
+"Angola","Angola"
+"Anguilla","Anguilla"
+"Antarctica","Antarctica"
+"Antigua and Barbuda","Antigua and Barbuda"
+"Argentina","Argentina"
+"Armenia","Armenia"
+"Aruba","Aruba"
+"Azerbaijan","Azerbaijan"
+"Australia","Australia"
+"Bahamas","Bahamas"
+"Bahrain","Bahrain"
+"Bangladesh","Bangladesh"
+"Barbados","Barbados"
+"Belarus","Belarus"
+"Belgium","Belgium"
+"Belize","Belize"
+"Benin","Benin"
+"Bermuda","Bermuda"
+"Bhutan","Bhutan"
+"Bosnia and Herzegovina","Bosnia and Herzegovina"
+"Bolivia","Bolivia"
+"Botswana","Botswana"
+"Bouvet Island","Bouvet Island"
+"Brazil","Brazil"
+"British Indian Ocean Territory","British Indian Ocean Territory"
+"British Virgin Islands","British Virgin Islands"
+"Brunei","Brunei"
+"Burkina Faso","Burkina Faso"
+"Burundi","Burundi"
+"Cambodia","Cambodia"
+"Cameroon","Cameroon"
+"Canada","Canada"
+"Cape Verde","Cape Verde"
+"Cayman Islands","Cayman Islands"
+"Central African Republic","Central African Republic"
+"Chad","Chad"
+"China","China"
+"Chile","Chile"
+"Christmas Island","Christmas Island"
+"Cocos [Keeling] Islands","Cocos [Keeling] Islands"
+"Comoros","Comoros"
+"Congo","Congo"
+"Colombia","Colombia"
+"Cook Islands","Cook Islands"
+"Costa Rica","Costa Rica"
+"Cuba","Cuba"
+"Cyprus","Cyprus"
+"Czech Republic","Czech Republic"
+"Côte d’Ivoire","Côte d’Ivoire"
+"Djibouti","Djibouti"
+"Denmark","Denmark"
+"Dominica","Dominica"
+"Dominican Republic","Dominican Republic"
+"Ecuador","Ecuador"
+"Egypt","Egypt"
+"El Salvador","El Salvador"
+"Equatorial Guinea","Equatorial Guinea"
+"Eritrea","Eritrea"
+"Estonia","Estonia"
+"Ethiopia","Ethiopia"
+"Falkland Islands","Falkland Islands"
+"Faroe Islands","Faroe Islands"
+"Fiji","Fiji"
+"Finland","Finland"
+"France","France"
+"French Guiana","French Guiana"
+"French Polynesia","French Polynesia"
+"Gabon","Gabon"
+"French Southern Territories","French Southern Territories"
+"Gambia","Gambia"
+"Georgia","Georgia"
+"Gibraltar","Gibraltar"
+"Ghana","Ghana"
+"Greenland","Greenland"
+"Guadeloupe","Guadeloupe"
+"Guatemala","Guatemala"
+"Grenada","Grenada"
+"Guam","Guam"
+"Guernsey","Guernsey"
+"Guinea","Guinea"
+"Guinea","Guinea"
+"Guyana","Guyana"
+"Haiti","Haiti"
+"Heard Island and McDonald Islands","Heard Island and McDonald Islands"
+"Honduras","Honduras"
+"Hong Kong SAR China","Hong Kong SAR China"
+"Iceland","Iceland"
+"India","India"
+"Indonesia","Indonesia"
+"Iran","Iran"
+"Iraq","Iraq"
+"Ireland","Ireland"
+"Isle of Man","Isle of Man"
+"Israel","Israel"
+"Jamaica","Jamaica"
+"Jersey","Jersey"
+"Japan","Japan"
+"Jordan","Jordan"
+"Kazakhstan","Kazakhstan"
+"Kenya","Kenya"
+"Kuwait","Kuwait"
+"Kiribati","Kiribati"
+"Kyrgyzstan","Kyrgyzstan"
+"Laos","Laos"
+"Latvia","Latvia"
+"Lebanon","Lebanon"
+"Lesotho","Lesotho"
+"Liberia","Liberia"
+"Libya","Libya"
+"Liechtenstein","Liechtenstein"
+"Lithuania","Lithuania"
+"Luxembourg","Luxembourg"
+"Macau SAR China","Macau SAR China"
+"Macedonia","Macedonia"
+"Madagascar","Madagascar"
+"Malaysia","Malaysia"
+"Malawi","Malawi"
+"Maldives","Maldives"
+"Mali","Mali"
+"Malta","Malta"
+"Marshall Islands","Marshall Islands"
+"Martinique","Martinique"
+"Mauritania","Mauritania"
+"Mauritius","Mauritius"
+"Mayotte","Mayotte"
+"Micronesia","Micronesia"
+"Mexico","Mexico"
+"Mongolia","Mongolia"
+"Moldova","Moldova"
+"Monaco","Monaco"
+"Montenegro","Montenegro"
+"Montserrat","Montserrat"
+"Morocco","Morocco"
+"Mozambique","Mozambique"
+"Myanmar [Burma]","Myanmar [Burma]"
+"Namibia","Namibia"
+"Nauru","Nauru"
+"Nepal","Nepal"
+"Netherlands Antilles","Netherlands Antilles"
+"Netherlands","Netherlands"
+"New Caledonia","New Caledonia"
+"New Zealand","New Zealand"
+"Nicaragua","Nicaragua"
+"Niger","Niger"
+"Nigeria","Nigeria"
+"Niue","Niue"
+"Norfolk Island","Norfolk Island"
+"North Korea","North Korea"
+"Northern Mariana Islands","Northern Mariana Islands"
+"Norway","Norway"
+"Oman","Oman"
+"Pakistan","Pakistan"
+"Palau","Palau"
+"Palestinian Territories","Palestinian Territories"
+"Panama","Panama"
+"Papua New Guinea","Papua New Guinea"
+"Paraguay","Paraguay"
+"Peru","Peru"
+"Philippines","Philippines"
+"Pitcairn Islands","Pitcairn Islands"
+"Portugal","Portugal"
+"Puerto Rico","Puerto Rico"
+"Qatar","Qatar"
+"Russia","Russia"
+"Rwanda","Rwanda"
+"Réunion","Réunion"
+"Saint Barthélemy","Saint Barthélemy"
+"Saint Helena","Saint Helena"
+"Saint Kitts and Nevis","Saint Kitts and Nevis"
+"Saint Lucia","Saint Lucia"
+"Saint Martin","Saint Martin"
+"Saint Pierre and Miquelon","Saint Pierre and Miquelon"
+"Saint Vincent and the Grenadines","Saint Vincent and the Grenadines"
+"Samoa","Samoa"
+"San Marino","San Marino"
+"Saudi Arabia","Saudi Arabia"
+"Senegal","Senegal"
+"Serbia","Serbia"
+"Seychelles","Seychelles"
+"Sierra Leone","Sierra Leone"
+"Singapore","Singapore"
+"Solomon Islands","Solomon Islands"
+"Somalia","Somalia"
+"South Africa","South Africa"
+"South Georgia and the South Sandwich Islands","South Georgia and the South Sandwich Islands"
+"South Korea","South Korea"
+"Spain","Spain"
+"Sri Lanka","Sri Lanka"
+"Sudan","Sudan"
+"Suriname","Suriname"
+"Svalbard and Jan Mayen","Svalbard and Jan Mayen"
+"Swaziland","Swaziland"
+"Sweden","Sweden"
+"Switzerland","Switzerland"
+"Syria","Syria"
+"São Tomé and Príncipe","São Tomé and Príncipe"
+"Taiwan","Taiwan"
+"Tajikistan","Tajikistan"
+"Tanzania","Tanzania"
+"Thailand","Thailand"
+"Timor","Timor"
+"Togo","Togo"
+"Tokelau","Tokelau"
+"Tonga","Tonga"
+"Trinidad and Tobago","Trinidad and Tobago"
+"Tunisia","Tunisia"
+"Turkey","Turkey"
+"Turkmenistan","Turkmenistan"
+"Turks and Caicos Islands","Turks and Caicos Islands"
+"U.S. Minor Outlying Islands","U.S. Minor Outlying Islands"
+"Tuvalu","Tuvalu"
+"U.S. Virgin Islands","U.S. Virgin Islands"
+"Uganda","Uganda"
+"Ukraine","Ukraine"
+"United Arab Emirates","United Arab Emirates"
+"United Kingdom","United Kingdom"
+"Uruguay","Uruguay"
+"Uzbekistan","Uzbekistan"
+"Vanuatu","Vanuatu"
+"Vatican City","Vatican City"
+"Venezuela","Venezuela"
+"Vietnam","Vietnam"
+"Wallis and Futuna","Wallis and Futuna"
+"Western Sahara","Western Sahara"
+"Yemen","Yemen"
+"Zambia","Zambia"
+"Zimbabwe","Zimbabwe"
+"Åland Islands","Åland Islands"
