Finalized the VAT Deduction flow for exporting to other EU Countries

--- a/core/i18n/resource/i18n/en-US.csv
+++ b/core/i18n/resource/i18n/en-US.csv
@@ -269,6 +269,7 @@
 "as soon as you receive the products and rate them","as soon as you receive the products and rate them"
 "Invoice to","Invoice to"
 "Pay Online","Pay Online"
+"This is not a valid EU VAT Number","This is not a valid EU VAT Number"
 "as soon as you receive the products and submit a review","as soon as you receive the products and submit a review"
 "Server failed to verify EU VAT Number","Server failed to verify EU VAT Number"
 "VAT deducted, please account for VAT according to your local law","VAT deducted, please account for VAT according to your local law"
