adding missing texts

--- a/core/i18n/resource/i18n/en-US.csv
+++ b/core/i18n/resource/i18n/en-US.csv
@@ -508,3 +508,11 @@
 "Zambia","Zambia"
 "Zimbabwe","Zimbabwe"
 "Åland Islands","Åland Islands"
+"Transaction is being processed","Transaction is being processed"
+"Please Wait...","Please Wait..."
+"What are the next steps?","What are the next steps?"
+"Shipping Address","Shipping Address"
+"FAQ","FAQ"
+"Suggested Products","Suggested Products"
+"Shipping Fee","Shipping Fee"
+"VAT (Included)","VAT (Included)"
