fixing issues with Checkout, VAT and Invoicing reduced console.log spam

--- a/core/i18n/resource/i18n/bg-BG.csv
+++ b/core/i18n/resource/i18n/bg-BG.csv
@@ -99,7 +99,7 @@
 "hip","хип"
 "length","дължина"
 "New Product Arrivals","Пристигане на нов продукт"
-"Product will available soon for you :)","Продуктът ще бъде наличен скоро за вас :)"
+"Available soon","Available soon"
 "Login / Registration","Вход / Регистрация"
 "Shipping Total Cost","Обща стойност на доставката"
 "EKONT","EKONT"
