--- a/core/i18n/resource/i18n/en-US.csv
+++ b/core/i18n/resource/i18n/en-US.csv
@@ -192,7 +192,7 @@
 "hip","hip"
 "length","length"
 "New Product Arrivals","New Product Arrivals"
-"Product will available soon for you :)","Product will available soon for you :)"
+"Available soon","Available soon"
 "Login / Registration","Login / Registration"
 "Shipping Total Cost","Shipping Total Cost"
 "EKONT","EKONT"
@@ -271,8 +271,8 @@
 "Pay Online","Pay Online"
 "This is not a valid EU VAT Number","This is not a valid EU VAT Number"
 "as soon as you receive the products and submit a review","as soon as you receive the products and submit a review"
-"Server failed to verify EU VAT Number","Server failed to verify EU VAT Number"
-"VAT deducted, please account for VAT according to your local law","VAT deducted, please account for VAT according to your local law"
+"Failed to verify your EU VAT Number","Failed to verify your EU VAT Number"
+"Account for VAT according to your local law","Account for VAT according to your local law"
 "Placing the order failed, please contact support!","Placing the order failed, please contact support!"
 "addressUpdated","Address was updated"
 "Afghanistan","Afghanistan"
